tests/files/flow_controller_tests/should_run/035.cmdr
x = parseFloat(true);
print x;