tests/files/flow_controller_tests/should_fail/076.cmdr
x = true;
print coth(x);